--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -97,30 +97,36 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="https://reservaciondevuelo.com"><img src="images/logo.png" class="logo" alt="Logo"></a>
+        <a class="navbar-brand" href="https://reservaciondevuelo.com">
+          <img src="images/logo.png" class="logo" alt="Logo">
+        </a>
       </div>
       
       <div class="callnow_mm">
         <a href="tel: (888) 441-8506">
-          <div class="hdrtxt"><i class="fa fa-headphones"></i> Llamar </div>
+          <div class="hdrtxt"><i class="fa fa-headphones"></i> Call </div>
         </a>
       </div>
       
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar_st">
-          <li class="active"><a href="https://reservaciondevuelo.com"><strong>Inicio</strong></a></li>
-          <li><a href="/about"><i class="fa fa-angle-right"></i> <strong>Sobre Nosotros</strong></a></li>
-          <li><a href="/us-flights"><strong>Viajes</strong></a></li>
-          <li><a href="/contact"><strong>Contáctanos</strong></a></li>
+          <li class="active"><a href="https://reservaciondevuelo.com"><strong>Home</strong></a></li>
+          <li><a href="/about"><i class="fa fa-angle-right"></i> <strong>About Us</strong></a></li>
+          <li><a href="/us-flights"><strong>Travel</strong></a></li>
+          <li><a href="/contact"><strong>Contact Us</strong></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <div class="tollfree">
-            <a href="tel: (888) 441-8506"><span>Llama 24/7 para las mejores ofertas</span><img src="images/phone01.png" alt="Teléfono">  (888) 441-8506 </a>
+            <a href="tel: (888) 441-8506">
+              <span>Call 24/7 for the best deals</span>
+              <img src="images/phone01.png" alt="Phone"> (888) 441-8506
+            </a>
           </div>
         </ul>
       </div>
     </div>
   </nav>
+  
   
 <div class="pagebanner">
   <h1>Contáctanos</h1>
