--- a/views/index.ejs
+++ b/views/index.ejs
@@ -351,45 +351,52 @@
         }
     </style>
 
-
-    <nav class="navbar">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="https://reservaciondevuelo.com/"><img src="images/logo.png" class="logo"
-                        alt="Logo"></a>
-            </div>
-
-            <div class="callnow_mm">
-                <a href="tel: (888) 441-8506">
-                    <div class="hdrtxt"><i class="fa fa-headphones"></i> <span data-translate="call">Llamar</span>
-                    </div>
-                </a>
-            </div>
-
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav navbar_st">
-                    <li class="active"><a href="https://reservaciondevuelo.com/"><strong
-                                data-translate="home">Inicio</strong></a></li>
-                    <li><a href="/about"><strong data-translate="about_us">Sobre Nosotros</strong></a></li>
-                    <li><a href="/us-flights"><strong data-translate="travel">Viajes</strong></a></li>
-                    <li><a href="/contact"><strong data-translate="contact_us">Contáctanos</strong></a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <div class="tollfree">
-                        <a href="tel: (888) 441-8506">
-                            <span data-translate="call_24_7">Llama 24/7 para las mejores ofertas</span>
-                            <img src="images/phone01.png" alt="Teléfono"> (888) 441-8506
-                        </a>
-                    </div>
-                </ul>
-            </div>
+<nav class="navbar">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="https://reservaciondevuelo.com/">
+                <img src="images/logo.png" class="logo" alt="Logo">
+            </a>
         </div>
-    </nav>
+
+        <div class="callnow_mm">
+            <a href="tel: (888) 441-8506">
+                <div class="hdrtxt"><i class="fa fa-headphones"></i> <span data-translate="call">Call</span></div>
+            </a>
+        </div>
+
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav navbar_st">
+                <li class="active">
+                    <a href="https://reservaciondevuelo.com/"><strong data-translate="home">Home</strong></a>
+                </li>
+                <li>
+                    <a href="/about"><strong data-translate="about_us">About Us</strong></a>
+                </li>
+                <li>
+                    <a href="/us-flights"><strong data-translate="travel">Travel</strong></a>
+                </li>
+                <li>
+                    <a href="/contact"><strong data-translate="contact_us">Contact Us</strong></a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <div class="tollfree">
+                    <a href="tel: (888) 441-8506">
+                        <span data-translate="call_24_7">Call 24/7 for the best deals</span>
+                        <img src="images/phone01.png" alt="Phone"> (888) 441-8506
+                    </a>
+                </div>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 
 
     <section class="banners">
