--- a/views/index.ejs
+++ b/views/index.ejs
@@ -404,7 +404,7 @@
             <div class="clickFull">
                 <a href="tel:(888) 285-2767" class="ddka"></a>
                 <div class="airLineimg">
-                    <h1 class="blink1">Mostrador de Reservas de Expedia</h1>
+                    <h1 class="blink1">Mostrador de Reservas de Airline</h1>
                     <img src="images/Generic-Banner1.png">
                 </div>
                 <!--<a href="tel:(888) 441-8506">
@@ -2681,7 +2681,7 @@ background-color: #0071c2; color: white; text-decoration: none; border-radius: 6
                             </button>
                             <div class="popup-content">
                                 <img alt="Logo" class="header-logo" loading="lazy" width="120" height="40"
-                                    decoding="async" data-nimg="1" style="color:transparent" src="images/expedia.png">
+                                    decoding="async" data-nimg="1" style="color:transparent" src="images/logo.png">
                                 <p>Habla con un experto en viajes y ahorra un 25%</p>
                                 <h2 class="support-no">
                                     <i class="fas fa-headset"></i> <!-- -->(888) 285-2767<!-- -->
