--- a/views/travel.ejs
+++ b/views/travel.ejs
@@ -4296,7 +4296,7 @@ Las Vegas, NV 89144, USA
                        
                        </div>
                    <div class="popup-content">
-                      <img alt="Logo" class="header-logo" loading="lazy" width="120" height="40" decoding="async" data-nimg="1" style="color:transparent" src="images/expedia.png">
+                      <img alt="Logo" class="header-logo" loading="lazy" width="120" height="40" decoding="async" data-nimg="1" style="color:transparent" src="images/logo.png">
                       <p>Talk to a travel expert and Save 25%</p>
                       <h2 class="support-no">
                          <i class="fas fa-headset"></i> <!-- -->(888) 285-2767<!-- --> 
@@ -4645,3 +4645,36 @@ Las Vegas, NV 89144, USA
       });
     }
   </script>
+
+
+
+<script>
+    // Function to check if the user is on a mobile device
+    function isMobileDevice() {
+        return window.innerWidth <= 767; // Adjust breakpoint as needed
+    }
+
+
+    //  Function to show the popup after 15 seconds on mobile devices
+    function showPopupAfterDelay() {
+        if (isMobileDevice()) {
+            setTimeout(function () {
+                var popup = document.getElementById("boxes");
+                if (popup) {
+                    popup.style.display = "block";
+                }
+            }, 10000); // 15 seconds delay
+        }
+    }
+
+
+
+    // Call the function on page load
+    document.addEventListener("DOMContentLoaded", showPopupAfterDelay);
+</script>
+
+<style>
+    #boxes {
+        display: none; /* Initially hide the popup */
+    }
+</style>
