--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -113,6 +113,7 @@
           <li class="active"><a href="https://reservaciondevuelo.com"><strong>Home</strong></a></li>
           <li><a href="/about"><i class="fa fa-angle-right"></i> <strong>About Us</strong></a></li>
           <li><a href="/us-flights"><strong>Travel</strong></a></li>
+            <li><a href="/mx-flights"><Strong>Flight Deals</Strong></a></li>
           <li><a href="/contact"><strong>Contact Us</strong></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
