--- a/views/index.ejs
+++ b/views/index.ejs
@@ -381,6 +381,9 @@
                 <li>
                     <a href="/us-flights"><strong data-translate="travel">Travel</strong></a>
                 </li>
+
+                  <li><a href="/mx-flights"><Strong   data-translate="mx-flights"  >Flight Deals</Strong></a></li>
+
                 <li>
                     <a href="/contact"><strong data-translate="contact_us">Contact Us</strong></a>
                 </li>
