--- a/views/terms-conditions.ejs
+++ b/views/terms-conditions.ejs
@@ -111,6 +111,7 @@
         <li class="active"><a href="https://www.reservaciondevuelo.com"><strong>Home</strong></a></li>
         <li><a href="/about"><strong>About Us</strong></a></li>
         <li><a href="/us-flights"><Strong>Travel</Strong></a></li>
+          <li><a href="/mx-flights"><Strong>Flight Deals</Strong></a></li>
         <li><a href="/contact"><Strong>Contact Us</Strong</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
