--- a/views/mx-flights.ejs
+++ b/views/mx-flights.ejs
@@ -363,11 +363,11 @@
       <a class="navbar-brand" href="https://www.reservaciondevuelo.com"><img src="images/logo.png" class="logo"></a>
     </div>
 	
-	 <div class="callnow_mm">
+	 <!-- <div class="callnow_mm">
         <a href="tel: +52 800 681 8074">
         <div class="hdrtxt"><i class="fa fa-headphones "></i> Call </div>
         </a>
-     </div>
+     </div> -->
 	
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar_st">
@@ -1617,9 +1617,23 @@ background-color: #0071c2; color: white; text-decoration: none; border-radius: 6
                                 </h6>
                             </div>
                             <div id="faqCollapseSix" class="collapse" aria-labelledby="faqHeadingSix" data-parent="#faqAccordion">
-                                <div class="card-body">
-                                    Llama a nuestro equipo de soporte al <strong>+52 800 681 8074</strong>. Estamos disponibles 24/7 para ayudarte.
-                                </div>
+                                <!-- <div class="card-body"  
+                                
+                              
+                                >
+                                   Llama a nuestro equipo de soporte al <strong    style="margin-left: 35px;"  >   
+                                    
+                              &nbsp;   &nbsp;   &nbsp;   &nbsp;   &nbsp;      &nspar;  &nspar; &nspar;  &nspar;  &nspar; &nspar;  +52 800 681 8074</strong>. Estamos disponibles 24/7 para ayudarte.
+                                </div> -->
+
+<div class="card-body">
+  Llama a nuestro equipo de soporte al 
+  <!-- <strong style="margin-left: 35px;">+52 800 681 8074</strong>.  -->
+  <strong style="padding-left: 35px;">&nbsp;&nbsp;+52 800 681 8074</strong>
+
+  Estamos disponibles 24/7 para ayudarte.
+</div>
+
                             </div>
                         </div>
                     </div> <!-- End accordion -->
