--- a/views/mx-flights.ejs
+++ b/views/mx-flights.ejs
@@ -380,7 +380,9 @@
       <ul class="nav navbar-nav navbar-right">
         <div class="tollfree">
             <a href="tel: +52 800 681 8074">
-                <span>Llama 24/7 para nuestras mejores ofertas</span><img src="images/phone01.png">   +52 800 681 8074 </a>
+                <span>Llama 24/7 para nuestras mejores ofertas</span>
+                <img src="images/phone01.png" style="padding-left: 10px;"> <strong style="padding-left: 35px;">&nbsp;&nbsp;+52 800 681 8074</strong>
+</a>
         </div>
         
       </ul>
@@ -424,10 +426,10 @@
         <h2><p><b>No Hold - Call Answered in 5 Sec</b></p>
             <b><a href="tel:+52 800 681 8074" id="ClickToCallEvent" class="blink">Click to Call !</a></b>
         </h2>
-        <div class="numbers">
-            <a href="tel: +52 800 681 8074">
+        <div class="numbers" style="padding-left: 20px;" >
+            <a href="tel: +52 800 681 8074">&nbsp;&nbsp;
                 <span data-translate="call_24_7">Llama 24/7 para las mejores ofertas</span>
-                <img src="images/phone01.png" alt="Teléfono"> +52 800 681 8074
+                <img src="images/phone01.png" alt="Teléfono">&nbsp;&nbsp; +52 800 681 8074
             </a>
             
         </div>
@@ -1626,10 +1628,10 @@ background-color: #0071c2; color: white; text-decoration: none; border-radius: 6
                               &nbsp;   &nbsp;   &nbsp;   &nbsp;   &nbsp;      &nspar;  &nspar; &nspar;  &nspar;  &nspar; &nspar;  +52 800 681 8074</strong>. Estamos disponibles 24/7 para ayudarte.
                                 </div> -->
 
-<div class="card-body">
+<div class="card-body" style="padding-left: 35px;" >
   Llama a nuestro equipo de soporte al 
   <!-- <strong style="margin-left: 35px;">+52 800 681 8074</strong>.  -->
-  <strong style="padding-left: 35px;">&nbsp;&nbsp;+52 800 681 8074</strong>
+  <p style="margin-left: 35px;"> &nbsp;&nbsp;  <strong>&nbsp;&nbsp;+52 800 681 8074</strong></p>
 
   Estamos disponibles 24/7 para ayudarte.
 </div>
