--- a/views/about.ejs
+++ b/views/about.ejs
@@ -228,9 +228,12 @@
 
 
 
+<!-- jQuery (required for Bootstrap 3 JS) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-
-
+</body>
 </html>
 
 	
