--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -111,9 +111,12 @@
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav navbar_st">
           <li class="active"><a href="https://reservaciondevuelo.com"><strong>Home</strong></a></li>
-          <li><a href="/about"><i class="fa fa-angle-right"></i> <strong>About Us</strong></a></li>
+          <li><a href="/about">
+            <!-- <i class="fa fa-angle-right"></i>  -->
+            <strong>About Us</strong></a></li>
           <li><a href="/us-flights"><strong>Travel</strong></a></li>
             <li><a href="/mx-flights"><Strong>Flight Deals</Strong></a></li>
+               
           <li><a href="/contact"><strong>Contact Us</strong></a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -236,9 +239,12 @@ Las Vegas, NV 89144, USA
 
 
 
+<!-- jQuery (required for Bootstrap 3 JS) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-
-
+</body>
 </html>
 
 	
