--- a/views/mexicoflight.ejs
+++ b/views/mexicoflight.ejs
@@ -502,7 +502,7 @@
 
     <div class="slider_homes" style="background: url(images/bg.jpg) left top no-repeat;
    height: auto;
-   padding: 30px 0px 80px;
+   /* padding: 30px 0px 80px; */
    background-size: cover;
    background-position: right;">
         <div class="container">
