--- a/views/mx-flights.ejs
+++ b/views/mx-flights.ejs
@@ -58,7 +58,7 @@
 
 <script>
   gtag('config', 'AW-16657952456/BJFiCPegsJoaEMjdkIc-', {
-    'phone_conversion_number': '888-928-1369'
+    'phone_conversion_number': '+52 800 681 8074'
   });
 </script>
 
@@ -75,7 +75,7 @@
 
 <script>
   gtag('config', 'AW-16751523481/xw6MCIDC8eAZEJnt37M-', {
-    'phone_conversion_number': '(888) 928-1369'
+    'phone_conversion_number': '+52 800 681 8074'
   });
 </script>
 
@@ -88,6 +88,10 @@
 <body>
    
     <style>
+
+
+
+
         section.banners {
           display: none;
       } 
@@ -375,14 +379,13 @@
         <li><a href="/about"><strong>About Us</strong></a></li>
         <li><a href="/us-flights"><Strong>Travel</Strong></a></li>
          <li><a href="/mx-flights"><Strong>Flight Deals</Strong></a></li>
+           
         <li><a href="/contact"><Strong>Contact Us</Strong></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <div class="tollfree">
-            <a href="tel: +52 800 681 8074">
-                <span>Llama 24/7 para nuestras mejores ofertas</span>
-                <img src="images/phone01.png" style="padding-left: 10px;"> <strong style="padding-left: 35px;">&nbsp;&nbsp;+52 800 681 8074</strong>
-</a>
+            <a href="tel: +52 800 681 8074"><span>Llama 24/7 para nuestras mejores ofertas</span><img src="images/phone01.png"> 
+                &nbsp; &nbsp;+52 800 681 8074 </a>
         </div>
         
       </ul>
@@ -390,50 +393,52 @@
   </div>
 </nav>  
 
+
+    <!-- mobile part  -->
 <section class="banners">
     <div class="bannerInner">
         <div class="clickFull">
              <a href="tel:+52 800 681 8074" class="ddka"></a>
     <div class="airLineimg">
-        <h1 class="blink1">Expedia Reservations Desk</h1>
-        <img src="images/Generic-Banner1.png">
+      
     </div>
-    <!--<a href="tel:+52 800 681 8074">
-    <ul class="list-view-items1">
-                  <li> New Bookings</li>
-                  <li> Changes </li>
-                  <li> Cancellations</li>
-                  <li> Customer Service </li>
-                  <li> Refunds </li>
-                  <li> Upgrades </li>
-    </ul></a>-->
+  
     <h1><span><a href="tel:+52 800 681 8074">New Bookings | Changes | Cancellations <!--| Refunds | Upgrades--></a></span></h1>
-  <!--  <div class="airlineLlogos">
-        <img src="images/airline-gnric-pullu.png">
-    </div>
-    <div class="dss-call2"><a href="tel:+52 800 681 8074">Booking &amp; Changes Over The Phone</a></div>
-
-        <ul>
-            <li>Flexible payment</li>
-            <li>Price match guarantee</li>
-        </ul>
-        <a href="tel:+52 800 681 8074" id="girlIconCallEvent">
-       <div class="girlCalling">
-           
-               <img src="images/calling-cus.png">
-          
-        </div> </a>-->
+  
         <h2><p><b>No Hold - Call Answered in 5 Sec</b></p>
             <b><a href="tel:+52 800 681 8074" id="ClickToCallEvent" class="blink">Click to Call !</a></b>
         </h2>
-        <div class="numbers" style="padding-left: 20px;" >
-            <a href="tel: +52 800 681 8074">&nbsp;&nbsp;
-                <span data-translate="call_24_7">Llama 24/7 para las mejores ofertas</span>
-                <img src="images/phone01.png" alt="Teléfono">&nbsp;&nbsp; +52 800 681 8074
-            </a>
+          <section class="banners">
+        <div class="bannerInner">
+            <div class="clickFull">
+                <a href="tel:+52 800 681 8074" class="ddka"></a>
+                <div class="airLineimg">
+                    <h1 class="blink1">Mostrador de Reservas de Airline</h1>
+                    <img src="images/Generic-Banner1.png">
+                </div>
             
+                <h1><span><a href="tel:+52 800 681 8074">Nuevas Reservas | Cambios | Cancelaciones
+                         </a></span></h1>
+            
+                <h2>
+                    <p><b>Sin Esperas - Llamada Atendida en 5 Segundos</b></p>
+                    <b><a href="tel:+52 800 681 8074" id="ClickToCallEvent" class="blink">¡Haz clic para llamar!</a></b>
+                </h2>
+                <div class="numbers">
+                    <a href="tel:+52 800 681 8074">
+                        <span class="ringing_phone">
+                            <img src="images/phone-icon.gif" alt="Teléfono" style="width: 20px; height: 20px;">
+                        </span>
+                        <span class="nbrs">
+                            <small>Ofertas Exclusivas Solo por Teléfono</small> +52 800 681 8074
+                        </span>
+                    </a>
+                </div>
+                <p class="mt-3 tt_btm">Llama a nuestros expertos en reservas de aerolíneas y ahorra hasta un 60% en vuelos nacionales y hasta un 50% en vuelos internacionales</p>
+            </div>
+            <hr>
         </div>
-        <p class="mt-3 tt_btm">Call Our Airline Booking Experts and Save Up to 60% on Domestic and Up to 50% on International Flight Booking</p>
+    </section>
         </div>
         <hr>
       
@@ -441,7 +446,9 @@
 </section>
 
 
-<div class="slider_homes" style="background: url(images/bg5.jpg) left top no-repeat;
+<div class="slider_homes" style="
+
+background: url(images/bg5.jpg) left top no-repeat;
    height: auto;
    padding: 30px 0px 80px;
    background-size: cover;
