--- a/views/travel.ejs
+++ b/views/travel.ejs
@@ -360,7 +360,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="https://www.reservaciondevuelo.com"><img src="images/logo.png" class="logo"></a>
+      <a class="navbar-brand" href="https://www.reservaciondevuelo.com">
+        
+        <!-- <img src="images/logo.png" class="logo"/></a> -->
+
+        <img src="images/logo.png" style="height: 30px; width: auto;"/>  </a>
+
     </div>
 	
 	 <div class="callnow_mm">
@@ -375,6 +380,7 @@
         <li><a href="/about"><strong>About Us</strong></a></li>
         <li><a href="/us-flights"><Strong>Travel</Strong></a></li>
           <li><a href="/mx-flights"><Strong>Flight Deals</Strong></a></li>
+         
         <li><a href="/contact"><Strong>Contact Us</Strong></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -390,47 +396,47 @@
 <section class="banners">
     <div class="bannerInner">
         <div class="clickFull">
-             <a href="tel:(888) 285-2767" class="ddka"></a>
+             <a href="tel:+52 800 681 8074" class="ddka"></a>
     <div class="airLineimg">
-        <h1 class="blink1">Expedia Reservations Desk</h1>
-        <img src="images/Generic-Banner1.png">
+      
     </div>
-    <!--<a href="tel:(888) 285-2767">
-    <ul class="list-view-items1">
-                  <li> New Bookings</li>
-                  <li> Changes </li>
-                  <li> Cancellations</li>
-                  <li> Customer Service </li>
-                  <li> Refunds </li>
-                  <li> Upgrades </li>
-    </ul></a>-->
-    <h1><span><a href="tel:(888) 285-2767">New Bookings | Changes | Cancellations <!--| Refunds | Upgrades--></a></span></h1>
-  <!--  <div class="airlineLlogos">
-        <img src="images/airline-gnric-pullu.png">
-    </div>
-    <div class="dss-call2"><a href="tel:(888) 285-2767">Booking &amp; Changes Over The Phone</a></div>
-
-        <ul>
-            <li>Flexible payment</li>
-            <li>Price match guarantee</li>
-        </ul>
-        <a href="tel:(888) 285-2767" id="girlIconCallEvent">
-       <div class="girlCalling">
-           
-               <img src="images/calling-cus.png">
-          
-        </div> </a>-->
+  
+    <h1><span><a href="tel:+52 800 681 8074">New Bookings | Changes | Cancellations <!--| Refunds | Upgrades--></a></span></h1>
+  
         <h2><p><b>No Hold - Call Answered in 5 Sec</b></p>
-            <b><a href="tel:(888) 285-2767" id="ClickToCallEvent" class="blink">Click to Call !</a></b>
+            <b><a href="tel:+52 800 681 8074" id="ClickToCallEvent" class="blink">Click to Call !</a></b>
         </h2>
-        <div class="numbers">
-            <a href="tel: (888) 285-2767">
-                <span data-translate="call_24_7">Llama 24/7 para las mejores ofertas</span>
-                <img src="images/phone01.png" alt="Teléfono"> (888) 285-2767
-            </a>
+          <section class="banners">
+        <div class="bannerInner">
+            <div class="clickFull">
+                <a href="tel:(888) 285-2767" class="ddka"></a>
+                <div class="airLineimg">
+                    <h1 class="blink1">Mostrador de Reservas de Airline</h1>
+                    <img src="images/Generic-Banner1.png">
+                </div>
             
+                <h1><span><a href="tel:(888) 285-2767">Nuevas Reservas | Cambios | Cancelaciones
+                         </a></span></h1>
+            
+                <h2>
+                    <p><b>Sin Esperas - Llamada Atendida en 5 Segundos</b></p>
+                    <b><a href="tel:(888) 285-2767" id="ClickToCallEvent" class="blink">¡Haz clic para llamar!</a></b>
+                </h2>
+                <div class="numbers">
+                    <a href="tel:(888) 285-2767">
+                        <span class="ringing_phone">
+                            <img src="images/phone-icon.gif" alt="Teléfono" style="width: 20px; height: 20px;">
+                        </span>
+                        <span class="nbrs">
+                            <small>Ofertas Exclusivas Solo por Teléfono</small> (888) 285-2767
+                        </span>
+                    </a>
+                </div>
+                <p class="mt-3 tt_btm">Llama a nuestros expertos en reservas de aerolíneas y ahorra hasta un 60% en vuelos nacionales y hasta un 50% en vuelos internacionales</p>
+            </div>
+            <hr>
         </div>
-        <p class="mt-3 tt_btm">Call Our Airline Booking Experts and Save Up to 60% on Domestic and Up to 50% on International Flight Booking</p>
+    </section>
         </div>
         <hr>
       
